infrastructure/manifests/nodered/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-nodered-to-postgres
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: postgres-server
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: nodered-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-external-to-nodered-ui
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: nodered-ui
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: external-nodered-ui-clients
